--- a/css/map1-grid.css
+++ b/css/map1-grid.css
@@ -7,11 +7,18 @@
     position: relative;
 }
 
-.item1, .item2 > h4 {
-    position: relative;
-    height: 24.8px;
-    top: 50%;
-    margin-top: -14.4px;
+.item1 > h4 {
+	height: 19.2px;
+	position: relative;
+	top:50%;
+	margin-top: -9.6px;
+}
+
+.item2 > h4 {
+	height: 19.2px;
+	position: relative;
+	top:50%;
+	margin-top: -9.6px;
 }
 
 .item1:nth-child(1) {
