--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ hr {
 }
 
 .map1-grid {
-    display: inline-grid;
+    display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(7, 1fr);
     width: 90%;
@@ -146,7 +146,7 @@ hr {
 }
 
 .map2-grid {
-    display: inline-grid;
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(11, 1fr);
     width: 90%;
