--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(228, 227, 227);
     max-width: 700px;
 }
 body * {
@@ -38,12 +38,11 @@ body * {
 
 .items > img {
     position: relative;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     left: 50%;
-    top:50%;
-    margin-left:-15px;
-    margin-top:-15px;
+    top:9px;
+    margin-left:-10px;
 }
 
 .bottom-bar {
@@ -53,7 +52,7 @@ body * {
     grid-template-columns: repeat(3, 1fr);
     position: fixed;
     width: 95vw;
-    height: 60px;
+    height: 50px;
     bottom: 0px;
     left: 50%;
     margin-left: -47.5vw;
@@ -141,7 +140,7 @@ hr {
     height: 450px;
     gap: 5px;
     padding: 20px 5%;
-    background-color: rgb(223, 223, 223);
+    background-color: rgb(235, 235, 235);
     border-radius: 10px;
 }
 
@@ -153,7 +152,7 @@ hr {
     height: 450px;
     gap: 5px;
     padding: 20px 5%;
-    background-color: rgb(223, 223, 223);
+    background-color: rgb(235, 235, 235);
     border-radius: 10px;
 }
 
@@ -163,12 +162,12 @@ select {
     border: 0px;
     border-radius: 20px;
     position: relative;
+    background-color: white;
     left: 50%;
     margin-left: -45%;
 }
 
 .sample_img {
-    display: inline-block;
     overflow: hidden;
     width: 100px;
     height: 100px;
