--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(228, 227, 227);
+    background-color: #6337FF;
     max-width: 700px;
 }
 body * {
@@ -9,11 +9,30 @@ body * {
     -webkit-font-smoothing: antialiased;
 }
 
+
+.background {
+    width: 100vw;
+    height: 60%;
+    background-color: rgb(228, 228, 228);
+    position: fixed;
+    z-index: -1;
+    bottom: 0px;
+    left: 0px;
+}
+
+.login-text {
+    margin-left: 20px;
+    margin-top: 80px;
+    color:white;
+    margin-bottom: 10px;
+}
+
 .title {
     margin-left: 20px;
     color:black;
     margin-top: 20px;
 }
+
 
 .score-text {
     text-align: right;
@@ -39,7 +58,6 @@ body * {
 .items > img {
     position: relative;
     width: 20px;
-    height: 20px;
     left: 50%;
     top:9px;
     margin-left:-10px;
@@ -53,7 +71,7 @@ body * {
     position: fixed;
     width: 95vw;
     height: 50px;
-    bottom: 0px;
+    bottom: -500px;
     left: 50%;
     margin-left: -47.5vw;
     margin-bottom: 10px;
@@ -61,23 +79,40 @@ body * {
     overflow: hidden;
 }
 
+.half-box {
+    width: 90%;
+    background-color: rgba(250, 250, 250, 1);
+    border-radius: 20px;
+    padding: 20px 5%;
+    margin-top: 20px;
+    float: left;
+}
+
+.grid {
+    gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 90%;
+    margin-left: 25px;
+    height: 400px;
+}
+
 
 .login {
     position: relative;
     left: 50%;
-    width: 80%;
-    margin-left: -40%;
+    width: 100%;
+    margin-left: -50%;
 }
 
 .box {
-    width: 90%;
+    width: 80%;
     position: relative;
     left: 50%;
     margin-left: -45%;
-    border: 20px;
     background-color: rgba(250, 250, 250, 1);
     border-radius: 20px;
-    padding: 20px 0px;
+    padding: 20px 5%;
 }
 
 .img {
@@ -123,7 +158,7 @@ hr {
 }
 
 .sample_img > img {
-    height: 100%;
+    width: 100%;
 }
 
 .white {
@@ -169,29 +204,52 @@ select {
 
 .sample_img {
     overflow: hidden;
-    width: 100px;
+    width: 90%;
     height: 100px;
     background-color: rgb(160, 160, 160);
     position: relative;
     border-radius: 10px;
-    margin-left: 5px;
+    left: 50%;
+    margin-left: -45%;
 }
 
-.name {
-    text-align: center;
-    margin: 10px 0px 70px 0px;
+.stat {
+    margin-top: 30px;
+    height: 100px;
+}
+
+
+.help {
+    width: 40vw;
+    height: 140px;
+    border-radius: 20px;
+    background-color: rgb(19, 219, 136);
+    border: 0px;
+    position: relative;
+    left: 20px;
+    color: white;
+}
+
+.G-login {
+    width: 80%;
+    height: 50px;
+    background-color: rgb(228, 228, 228);
+    border: 0px;
+    border-radius: 10px;
+    position: relative;
+    left: 50%;
+    margin-left: -40%;
 }
 
 .login-btn {
-    width: 120px;
-    height: 45px;
-    border-radius: 30px;
+    width: 40vw;
+    height: 140px;
+    border-radius: 20px;
+    right: 25px;
     border: 0px;
-    background: linear-gradient(to right, #F27121, #E94057, #8A2387);
     color:white;
-    position: relative;
-    left: 50%;
-    margin-left: -60px;
+    background-color: #37a5ff;
+    position: absolute;
 }
 
 .login > input {
@@ -251,4 +309,8 @@ input {
 .blur {
     /* -webkit-backdrop-filter: blur(40px);
     backdrop-filter: blur(40px); */
+}
+
+.ani {
+    transition: 0.8s;
 }
