--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ hr {
 }
 
 hr {
-    width: 90%;
+    width: 100%;
     height: 5px;
     position: relative;
     left: 50%;
@@ -224,18 +224,18 @@ hr {
 }
 
 .booth-img {
-    width: 90%;
+    width: 100%;
     border-radius: 10px;
     margin-top: 5px;
 }
 
 .booth-full > p {
-    width: 90%;
+    width: 100%;
     margin-top: 10px;
 }
 
 .booth-full {
-    width: 100%;
+    width: 90%;
     height: 100%;
     background-color: white;
     position: fixed;
@@ -266,6 +266,11 @@ hr {
     z-index: 1000;
 }
 
+#AddRanking {
+    height: 70vh;
+    overflow: scroll;
+}
+
 select {
     width: 90%;
     height: 40px;
@@ -275,6 +280,31 @@ select {
     background-color: white;
     left: 50%;
     margin-left: -45%;
+}
+
+
+#AddHistory {
+    max-height: 400px;
+    overflow: scroll;
+}
+
+.his-box {
+    margin-bottom: 5px !important;
+}
+
+.his-box * {
+    display: inline-block;
+}
+.his-box > img {
+    float: left;
+}
+
+
+
+
+.bo-ti {
+    text-align: center;
+    margin: 30px 0px;
 }
 
 .sample_img {
